# lardata

./: CMakeLists.txt  CMakePresets.json  README.md
lardata/: CMakeLists.txt
lardata/ArtDataHelper/: CMakeLists.txt  ChargedSpacePointCreator.cpp  ChargedSpacePointCreator.h  FindAllP.h  HitCreator.cxx  HitCreator.h  HitUtils.cxx  HitUtils.h  MVAReader.cxx  MVAReader.h  MVAWrapperBase.cxx  MVAWrapperBase.h  MVAWriter.cxx  MVAWriter.h  ToElement.h  TrackUtils.cxx  TrackUtils.h  WireCreator.cxx  WireCreator.h
lardata/ArtDataHelper/Dumpers/: CMakeLists.txt  DumpAssociations.h  DumpChargedSpacePoints_module.cc  DumpClusters_module.cc  DumpHits_module.cc  DumpOpDetWaveforms_module.cc  DumpOpFlashes_module.cc  DumpOpHits_module.cc  DumpPCAxes_module.cc  DumpPFParticles_module.cc  DumpParticleIDs_module.cc  DumpRawDigits_module.cc  DumpSeeds_module.cc  DumpSimEnergyDeposits_module.cc  DumpSimPhotonsLite_module.cc  DumpSpacePoints_module.cc  DumpTracks_module.cc  DumpVertices_module.cc  DumpWires_module.cc  NewLine.h  PCAxisDumpers.h  SpacePointDumpers.cc  SpacePointDumpers.h  dump_opflashes.fcl  dump_ophits.fcl  dump_pids.fcl  dumpophits.fcl  hexfloat.h
lardata/DetectorInfoServices/: CMakeLists.txt  DetectorClocksService.h  DetectorClocksServiceStandard.cc  DetectorClocksServiceStandard.h  DetectorClocksServiceStandard_service.cc  DetectorPropertiesService.h  DetectorPropertiesServiceStandard.cc  DetectorPropertiesServiceStandard.h  DetectorPropertiesServiceStandard_service.cc  LArPropertiesService.h  LArPropertiesServiceStandard.cc  LArPropertiesServiceStandard.h  LArPropertiesServiceStandard_service.cc  ServicePack.h
lardata/RawData/utils/: CMakeLists.txt  LArRawInputDriver.cxx  LArRawInputDriver.h  LArRawInputDriverJP250L.cxx  LArRawInputDriverJP250L.h  LArRawInputDriverLongBo.cxx  LArRawInputDriverLongBo.h  LArRawInputDriverShortBo.cxx  LArRawInputDriverShortBo.h
lardata/RecoBaseProxy/: CMakeLists.txt  ChargedSpacePoints.h  ProxyBase.h  Track.cxx  Track.h
lardata/RecoBaseProxy/ProxyBase/: AssnsNodeAsTuple.h  AssnsTraits.h  AssociatedData.h  AssociatedDataProxyMaker.h  CollectionProxy.h  CollectionProxyElement.h  CollectionProxyMaker.h  MainCollectionProxy.h  OneTo01Data.h  OneTo01DataProxyMaker.h  ParallelData.h  ParallelDataProxyMaker.h  ProxyAsAuxProxyMaker.h  ProxyAsParallelData.h  WithAssociatedStructBase.h  WithProxyAsAuxStructBase.h  getCollection.h  makeAssociatedDataFrom.h  makeOneTo01dataFrom.h  makeParallelDataFrom.h  withAssociated.h  withCollectionProxy.h  withParallelData.h  withZeroOrOne.h
lardata/RecoObjects/: CMakeLists.txt  InteractGeneral.cxx  InteractGeneral.h  InteractPlane.cxx  InteractPlane.h  Interactor.h  KETrack.cxx  KETrack.h  KFTrackState.cxx  KFTrackState.h  KFitTrack.cxx  KFitTrack.h  KGTrack.cxx  KGTrack.h  KHit.h  KHitBase.cxx  KHitBase.h  KHitContainer.cxx  KHitContainer.h  KHitContainerWireLine.cxx  KHitContainerWireX.cxx  KHitGroup.cxx  KHitGroup.h  KHitMulti.cxx  KHitMulti.h  KHitTrack.cxx  KHitTrack.h  KHitWireLine.cxx  KHitWireLine.h  KHitWireX.cxx  KHitWireX.h  KHitsTrack.cxx  KHitsTrack.h  KTrack.cxx  KTrack.h  KalmanLinearAlgebra.h  PropAny.cxx  PropAny.h  PropXYZPlane.cxx  PropXYZPlane.h  (+26 more)
lardata/Utilities/: AssociationUtil.h  BulkAllocator.h  CMakeLists.txt  ChiSquareAccumulator.h  CollectionView.h  ComputePi_module.cc  CountersMap.h  DatabaseUtil.cc  DatabaseUtil.h  DatabaseUtil_service.cc  Dereference.h  DetectorPropertiesServiceArgoNeuT.h  DetectorPropertiesServiceArgoNeuT_service.cc  FastMatrixMathHelper.h  FindManyInChainP.h  FindManyInChainP.tcc  ForEachAssociatedGroup.h  GeometryUtilities.cxx  GeometryUtilities.h  GridContainerIndices.h  GridContainers.h  LArFFT.cc  LArFFT.h  LArFFTW.cxx  LArFFTW.h  LArFFTWPlan.cxx  LArFFTWPlan.h  LArFFT_service.cc  LArPropertiesServiceArgoNeuT_service.cc  MakeIndex.h  MarqFitAlg.cxx  NestedIterator.h  PxHitConverter.cxx  PxHitConverter.h  PxUtils.h  Range.h  RangeForWrapper.h  SeedCreator.h  SignalShaper.cxx  SignalShaper.h  (+8 more)
lardata/Utilities/argoneut/: CMakeLists.txt  DetectorPropertiesArgoNeuT.cc  DetectorPropertiesServiceArgoNeuT_service.cc  LArPropertiesServiceArgoNeuT.h
lardata/Utilities/test/: sss.fcl
test/: CMakeLists.txt
test/ArtDataHelper/: CMakeLists.txt  HitCollectionCreatorTest_module.cc  HitDataProductChecker_module.cc
test/DetectorInfo/: CMakeLists.txt
test/DetectorInfoServices/: CMakeLists.txt  LArPropTest_module.cc  ServicePackTest_module.cc  detectorpropertiesservicetest_bo.fcl  detectorpropertiesservicetest_lartpcdetector.fcl  detectorpropertiesservicetest_standard.fcl  lartest.fcl
test/RecoBaseProxy/: CMakeLists.txt  ChargedSpacePointProxyInputMaker_module.cc  ChargedSpacePointProxyTest_module.cc  ProxyBaseTest_module.cc  TrackProxyHitMaker_module.cc  TrackProxyTest_module.cc  TrackProxyTrackMaker_module.cc
test/RecoBaseProxy/ProxyBase/: AssnsTraits_test.cc  CMakeLists.txt
test/RecoObjects/: CMakeLists.txt  LATest.cc  SurfXYZTest.cc  SurfYZLineTest.cc  SurfYZTest.cc  TrackTest.cc
test/Utilities/: BulkAllocator_test.cc  CMakeLists.txt  ChiSquareAccumulator_test.cc  CollectionView_test.cc  CountersMap_test.cc  Dereference_test.cc  FastMatrixMath_test.cc  GridContainers_test.cc  NestedIterator_test.cc  RangeForWrapper_test.cc  SimpleFits_test.cc  TensorIndicesStress_test.cc  TensorIndices_test.cc  TupleLookupByTag_test.cc  filterRangeFor_test.cc
test/Utilities/testAssnsChainUtils/: AssnsChainClusterMaker_module.cc  AssnsChainHitMaker_module.cc  AssnsChainPFParticleMaker_module.cc  AssnsChainShowerMaker_module.cc  AssnsChainTest_module.cc  CMakeLists.txt
test/Utilities/testForEachAssociatedGroup/: AssnAnalyzer_module.cc  AssnProducer1_module.cc  AssnProducer2_module.cc  CMakeLists.txt  associated_groups_test.cc  associated_groups_with_left_test.cc
test/Utilities/testPtrMaker/: CMakeLists.txt  IntVectorProducer_module.cc  PtrMakerAnalyzer_module.cc  PtrMakerProducer2_module.cc  PtrMakerProducer_module.cc
ups/: product_deps  setup_for_development
